<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_page_title"
            android:textSize="24sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/username_hint"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/page_title"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/username_et"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/email_et"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/password_et"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/sign_up_button_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_et"
            android:layout_marginTop="15dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/already_have_acc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc_text"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="@id/sign_up_button"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:text="@string/log_in_here_text"
            app:layout_constraintTop_toBottomOf="@id/already_have_acc_text"
            app:layout_constraintStart_toStartOf="@id/already_have_acc_text"
            app:layout_constraintEnd_toEndOf="@id/already_have_acc_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>